welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.code
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {
  var temp_max: Int = 90;
  prinln("oui")
  if (isSummer) {
    temp_max == temp_max + 10;
  }
  return temp >= 60 && temp <= temp_max;
}